# Qcrc

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.cmake/: GetGitRevisionDescription.cmake  InfoVersion.h.in  InstallerScript.iss.in  ProJectName.qrc.in  version_exe.rc.in
helper/: AppInfo.cpp  AppInfo.h  Log.cpp  Log.h  singleton.h  stdafx.h
src/: main.cpp
